--- a/package.json
+++ b/package.json
@@ -5,6 +5,11 @@
   "author": "Josh Justice <josh.justice@accesscfa.com>",
   "license": "MIT",
   "devDependencies": {
-    "jest": "^26.1.0"
+    "eslint": "^7.5.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jest": "^23.19.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.1.0",
+    "prettier": "^2.0.5"
   }
 }
